--- a/html-css/Exercicio/desafios/modulo-02/d12/index.html
+++ b/html-css/Exercicio/desafios/modulo-02/d12/index.html
@@ -26,7 +26,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes<br>
             É tudo abreviado<br>
@@ -63,7 +63,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas<br>
             Escritas com a própria mão<br>
@@ -99,7 +99,7 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanarabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">Curso em Vídeo</a></p>
+        <p>Site criado por <a href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanarabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">&copy Curso em Vídeo</a></p>
     </footer>
 </body>
 </html>
