--- a/html-css/Exercicio/ex023/tabela002.html
+++ b/html-css/Exercicio/ex023/tabela002.html
@@ -13,6 +13,7 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th{
@@ -20,9 +21,26 @@
             padding: 10px;
         }
 
+        caption{
+            font-size: 1.5em;
+            font-weight: bolder;
+            padding: 10px;
+            background-color: lightgrey;
+        }
+
        thead, tfoot{
            background-color: gray;
            color: white;
+       }
+
+       thead > tr > th{
+           position: sticky;
+           top: -1px;
+           background-color: black;
+       }
+
+       tbody > tr:nth-child(2n){
+           background-color: lightgray;
        }
 
        td.num{
@@ -33,10 +51,11 @@
 <body>
     <h1>Uso de tabelas grandes</h1>
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col">População</th>
             </tr>
         </thead>
 
@@ -55,14 +74,117 @@
                 <td>Rio de Janeiro</td>
                 <td class="num">17 463 349</td>
             </tr>
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14 985 284</td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td class="num">11 597 484</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">11 466 630</td>
+            </tr>
+            <tr>
+                <td> Pernambuco</td>
+                <td class="num">9 674 793</td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="num">9 240 580</td>
+            </tr>
+            <tr>
+                <td>Pará</td>
+                <td class="num">8 777 124</td>
+            </tr>
+            <tr>
+                <td>Santa Catarina</td>
+                <td class="num">7 338 473</td>
+            </tr>
+            <tr>
+                <td>Goiás</td>
+                <td class="num">7 206 589</td>
+            </tr>
+            <tr>
+                <td>Maranhão</td>
+                <td class="num">7 153 262</td>
+            </tr>
+            <tr>
+                <td>Amazonas</td>
+                <td class="num">4 269 995</td>
+            </tr>
+            <tr>
+                <td>Espírito Santo</td>
+                <td class="num">4 108 508</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso</td>
+                <td class="num">3 567 234</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Norte</td>
+                <td class="num">3 560 903</td>
+            </tr>
+            <tr>
+                <td>Alagoas</td>
+                <td class="num">3 365 351</td>
+            </tr>
+            <tr>
+                <td>Piauí</td>
+                <td class="num">3 289 290</td>
+            </tr>
+            <tr>
+                <td>Distrito Federal</td>
+                <td class="num">3 094 325</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso do Sul</td>
+                <td class="num">2 839 188</td>
+            </tr>
+            <tr>
+                <td>Sergipe</td>
+                <td class="num">2 338 474</td>
+            </tr>
+            <tr>
+                <td>Rondônia</td>
+                <td class="num">1 815 278</td>
+            </tr>
+            <tr>
+                <td>Tocantins</td>
+                <td class="num">1 607 363</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso do Sul</td>
+                <td class="num">2 839 188</td>
+            </tr>
+            <tr>
+                <td>Acre</td>
+                <td class="num">906 876</td>
+            </tr>
+            <tr>
+                <td>Amapá</td>
+                <td class="num">877 613</td>
+            </tr>
+            <tr>
+                <td>Roraima</td>
+                <td class="num">450 479</td>
+            </tr>
         </tbody>
 
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>214 352 271</strong></td>
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, voluptatibus a itaque eaque natus officiis velit veritatis porro distinctio incidunt nesciunt similique, aperiam consectetur quam illo! Necessitatibus quam saepe accusantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed corporis vitae soluta. Autem, debitis cumque omnis aliquid quasi voluptate, dolor iure eius repellat commodi, esse quod animi necessitatibus odit iste! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti dolore alias repellat amet impedit vero temporibus atque quia eum, eos iusto sunt. Omnis in repellat soluta esse debitis consectetur atque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius maxime quos soluta fugit pariatur? Ea totam, error asperiores eveniet perferendis ut culpa maxime vero accusamus rem voluptatem maiores excepturi saepe! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat mollitia itaque eius nisi saepe obcaecati incidunt, minima qui facere quibusdam vel facilis! Recusandae magnam aliquam dicta aliquid sed, rem quis?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, voluptatibus a itaque eaque natus officiis velit veritatis porro distinctio incidunt nesciunt similique, aperiam consectetur quam illo! Necessitatibus quam saepe accusantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed corporis vitae soluta. Autem, debitis cumque omnis aliquid quasi voluptate, dolor iure eius repellat commodi, esse quod animi necessitatibus odit iste! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti dolore alias repellat amet impedit vero temporibus atque quia eum, eos iusto sunt. Omnis in repellat soluta esse debitis consectetur atque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius maxime quos soluta fugit pariatur? Ea totam, error asperiores eveniet perferendis ut culpa maxime vero accusamus rem voluptatem maiores excepturi saepe! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat mollitia itaque eius nisi saepe obcaecati incidunt, minima qui facere quibusdam vel facilis! Recusandae magnam aliquam dicta aliquid sed, rem quis?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, voluptatibus a itaque eaque natus officiis velit veritatis porro distinctio incidunt nesciunt similique, aperiam consectetur quam illo! Necessitatibus quam saepe accusantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed corporis vitae soluta. Autem, debitis cumque omnis aliquid quasi voluptate, dolor iure eius repellat commodi, esse quod animi necessitatibus odit iste! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti dolore alias repellat amet impedit vero temporibus atque quia eum, eos iusto sunt. Omnis in repellat soluta esse debitis consectetur atque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius maxime quos soluta fugit pariatur? Ea totam, error asperiores eveniet perferendis ut culpa maxime vero accusamus rem voluptatem maiores excepturi saepe! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat mollitia itaque eius nisi saepe obcaecati incidunt, minima qui facere quibusdam vel facilis! Recusandae magnam aliquam dicta aliquid sed, rem quis?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, voluptatibus a itaque eaque natus officiis velit veritatis porro distinctio incidunt nesciunt similique, aperiam consectetur quam illo! Necessitatibus quam saepe accusantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed corporis vitae soluta. Autem, debitis cumque omnis aliquid quasi voluptate, dolor iure eius repellat commodi, esse quod animi necessitatibus odit iste! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti dolore alias repellat amet impedit vero temporibus atque quia eum, eos iusto sunt. Omnis in repellat soluta esse debitis consectetur atque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius maxime quos soluta fugit pariatur? Ea totam, error asperiores eveniet perferendis ut culpa maxime vero accusamus rem voluptatem maiores excepturi saepe! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat mollitia itaque eius nisi saepe obcaecati incidunt, minima qui facere quibusdam vel facilis! Recusandae magnam aliquam dicta aliquid sed, rem quis?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, voluptatibus a itaque eaque natus officiis velit veritatis porro distinctio incidunt nesciunt similique, aperiam consectetur quam illo! Necessitatibus quam saepe accusantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed corporis vitae soluta. Autem, debitis cumque omnis aliquid quasi voluptate, dolor iure eius repellat commodi, esse quod animi necessitatibus odit iste! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti dolore alias repellat amet impedit vero temporibus atque quia eum, eos iusto sunt. Omnis in repellat soluta esse debitis consectetur atque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius maxime quos soluta fugit pariatur? Ea totam, error asperiores eveniet perferendis ut culpa maxime vero accusamus rem voluptatem maiores excepturi saepe! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat mollitia itaque eius nisi saepe obcaecati incidunt, minima qui facere quibusdam vel facilis! Recusandae magnam aliquam dicta aliquid sed, rem quis?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, voluptatibus a itaque eaque natus officiis velit veritatis porro distinctio incidunt nesciunt similique, aperiam consectetur quam illo! Necessitatibus quam saepe accusantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed corporis vitae soluta. Autem, debitis cumque omnis aliquid quasi voluptate, dolor iure eius repellat commodi, esse quod animi necessitatibus odit iste! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti dolore alias repellat amet impedit vero temporibus atque quia eum, eos iusto sunt. Omnis in repellat soluta esse debitis consectetur atque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius maxime quos soluta fugit pariatur? Ea totam, error asperiores eveniet perferendis ut culpa maxime vero accusamus rem voluptatem maiores excepturi saepe! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat mollitia itaque eius nisi saepe obcaecati incidunt, minima qui facere quibusdam vel facilis! Recusandae magnam aliquam dicta aliquid sed, rem quis?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, voluptatibus a itaque eaque natus officiis velit veritatis porro distinctio incidunt nesciunt similique, aperiam consectetur quam illo! Necessitatibus quam saepe accusantium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed corporis vitae soluta. Autem, debitis cumque omnis aliquid quasi voluptate, dolor iure eius repellat commodi, esse quod animi necessitatibus odit iste! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti dolore alias repellat amet impedit vero temporibus atque quia eum, eos iusto sunt. Omnis in repellat soluta esse debitis consectetur atque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius maxime quos soluta fugit pariatur? Ea totam, error asperiores eveniet perferendis ut culpa maxime vero accusamus rem voluptatem maiores excepturi saepe! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat mollitia itaque eius nisi saepe obcaecati incidunt, minima qui facere quibusdam vel facilis! Recusandae magnam aliquam dicta aliquid sed, rem quis?</p>
 </body>
 </html>
